// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb Component renders a breadcrumb with multiple items - with menu 1`] = `
<DocumentFragment>
  <div
    class="breadcrumb"
  >
    <div
      class="breadcrumbItemWrapper"
    >
      <div
        class="breadcrumbItemLabelWrapper"
      >
        <svg
          alt="PiCircleHalfTiltLight"
          aria-label="PiCircleHalfTiltLight"
          color="black"
          fill="currentColor"
          height="16"
          role="img"
          stroke="currentColor"
          stroke-width="0"
          style="color: black;"
          viewBox="0 0 256 256"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M200.12,55.88A102,102,0,1,0,55.88,200.13,102,102,0,1,0,200.12,55.88ZM90,209.62a89.61,89.61,0,0,1-21.23-13.89L90,174.49Zm32,8.16a90,90,0,0,1-20-3.58V162.49l20-20Zm32-3.58a89.8,89.8,0,0,1-20,3.58V130.49l20-20Zm32-17.4a89.45,89.45,0,0,1-20,12.83V98.49l20-20ZM60.27,187.24a90,90,0,0,1,127-127ZM198,184.57V71.43a90,90,0,0,1,0,113.14Z"
          />
        </svg>
        <div
          class="breadcrumbItemLabelStyle"
        >
          <div
            class="mia-platform-typography mia-platform-typography-ellipsis mia-platform-typography-single-line mia-platform-typography-ellipsis-single-line bodyL"
            role="paragraph"
          >
            first
          </div>
        </div>
      </div>
      <div
        class="mia-platform-dropdown-trigger breadcrumbMenuIcon"
      >
        <svg
          alt="AiOutlineCaretDown"
          aria-label="AiOutlineCaretDown"
          color="#636363"
          fill="currentColor"
          height="16"
          role="img"
          stroke="currentColor"
          stroke-width="0"
          style="color: rgb(99, 99, 99);"
          viewBox="0 0 1024 1024"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
          />
        </svg>
      </div>
    </div>
    <svg
      alt="PiCaretRight"
      aria-label="PiCaretRight"
      color="#636363"
      fill="currentColor"
      height="16"
      role="img"
      stroke="currentColor"
      stroke-width="0"
      style="color: rgb(99, 99, 99);"
      viewBox="0 0 256 256"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"
      />
    </svg>
    <div
      class="breadcrumbItemWrapper"
    >
      <div
        class="breadcrumbItemLabelWrapper withoutMenu"
      >
        <svg
          alt="PiCircleHalfTiltLight"
          aria-label="PiCircleHalfTiltLight"
          color="black"
          fill="currentColor"
          height="16"
          role="img"
          stroke="currentColor"
          stroke-width="0"
          style="color: black;"
          viewBox="0 0 256 256"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M200.12,55.88A102,102,0,1,0,55.88,200.13,102,102,0,1,0,200.12,55.88ZM90,209.62a89.61,89.61,0,0,1-21.23-13.89L90,174.49Zm32,8.16a90,90,0,0,1-20-3.58V162.49l20-20Zm32-3.58a89.8,89.8,0,0,1-20,3.58V130.49l20-20Zm32-17.4a89.45,89.45,0,0,1-20,12.83V98.49l20-20ZM60.27,187.24a90,90,0,0,1,127-127ZM198,184.57V71.43a90,90,0,0,1,0,113.14Z"
          />
        </svg>
        <div
          class="breadcrumbItemLabelStyle"
        >
          <div
            class="mia-platform-typography mia-platform-typography-ellipsis mia-platform-typography-single-line mia-platform-typography-ellipsis-single-line bodyL"
            role="paragraph"
          >
            empty items
          </div>
        </div>
      </div>
    </div>
    <svg
      alt="PiCaretRight"
      aria-label="PiCaretRight"
      color="#636363"
      fill="currentColor"
      height="16"
      role="img"
      stroke="currentColor"
      stroke-width="0"
      style="color: rgb(99, 99, 99);"
      viewBox="0 0 256 256"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"
      />
    </svg>
    <div
      class="breadcrumbItemWrapper"
    >
      <div
        class="breadcrumbItemLabelWrapper"
      >
        <svg
          alt="PiCircleHalfTiltLight"
          aria-label="PiCircleHalfTiltLight"
          color="black"
          fill="currentColor"
          height="16"
          role="img"
          stroke="currentColor"
          stroke-width="0"
          style="color: black;"
          viewBox="0 0 256 256"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M200.12,55.88A102,102,0,1,0,55.88,200.13,102,102,0,1,0,200.12,55.88ZM90,209.62a89.61,89.61,0,0,1-21.23-13.89L90,174.49Zm32,8.16a90,90,0,0,1-20-3.58V162.49l20-20Zm32-3.58a89.8,89.8,0,0,1-20,3.58V130.49l20-20Zm32-17.4a89.45,89.45,0,0,1-20,12.83V98.49l20-20ZM60.27,187.24a90,90,0,0,1,127-127ZM198,184.57V71.43a90,90,0,0,1,0,113.14Z"
          />
        </svg>
        <div
          class="breadcrumbItemLabelStyle"
        >
          <div
            class="mia-platform-typography mia-platform-typography-ellipsis mia-platform-typography-single-line mia-platform-typography-ellipsis-single-line bodyL"
            role="paragraph"
          >
            with search
          </div>
        </div>
      </div>
      <div
        class="mia-platform-dropdown-trigger breadcrumbMenuIcon"
      >
        <svg
          alt="AiOutlineCaretDown"
          aria-label="AiOutlineCaretDown"
          color="#636363"
          fill="currentColor"
          height="16"
          role="img"
          stroke="currentColor"
          stroke-width="0"
          style="color: rgb(99, 99, 99);"
          viewBox="0 0 1024 1024"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
          />
        </svg>
      </div>
    </div>
    <svg
      alt="PiCaretRight"
      aria-label="PiCaretRight"
      color="#636363"
      fill="currentColor"
      height="16"
      role="img"
      stroke="currentColor"
      stroke-width="0"
      style="color: rgb(99, 99, 99);"
      viewBox="0 0 256 256"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"
      />
    </svg>
    <div
      class="breadcrumbItemWrapper"
    >
      <div
        class="mia-platform-dropdown-trigger breadcrumbMenuIcon caretOnly"
      >
        <svg
          alt="AiOutlineCaretDown"
          aria-label="AiOutlineCaretDown"
          color="#636363"
          fill="currentColor"
          height="16"
          role="img"
          stroke="currentColor"
          stroke-width="0"
          style="color: rgb(99, 99, 99);"
          viewBox="0 0 1024 1024"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
          />
        </svg>
      </div>
    </div>
    <svg
      alt="PiCaretRight"
      aria-label="PiCaretRight"
      color="#636363"
      fill="currentColor"
      height="16"
      role="img"
      stroke="currentColor"
      stroke-width="0"
      style="color: rgb(99, 99, 99);"
      viewBox="0 0 256 256"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"
      />
    </svg>
    <div
      class="breadcrumbItemWrapper"
    >
      <div
        class="breadcrumbItemLabelWrapper last"
      >
        <div
          class="breadcrumbItemLabelStyle"
        >
          <div
            class="mia-platform-typography mia-platform-typography-ellipsis mia-platform-typography-single-line mia-platform-typography-ellipsis-single-line bodyL"
            role="paragraph"
          >
            without search
          </div>
        </div>
      </div>
      <div
        class="mia-platform-dropdown-trigger breadcrumbMenuIcon"
      >
        <svg
          alt="AiOutlineCaretDown"
          aria-label="AiOutlineCaretDown"
          color="#636363"
          fill="currentColor"
          height="16"
          role="img"
          stroke="currentColor"
          stroke-width="0"
          style="color: rgb(99, 99, 99);"
          viewBox="0 0 1024 1024"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Breadcrumb Component renders a breadcrumb with multiple items - without menu (Default) 1`] = `
<DocumentFragment>
  <div
    class="breadcrumb"
  >
    <div
      class="breadcrumbItemWrapper"
    >
      <div
        class="breadcrumbItemLabelWrapper initial withoutMenu"
      >
        <svg
          alt="PiCircleHalfTiltLight"
          aria-label="PiCircleHalfTiltLight"
          color="black"
          fill="currentColor"
          height="16"
          role="img"
          stroke="currentColor"
          stroke-width="0"
          style="color: black;"
          viewBox="0 0 256 256"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M200.12,55.88A102,102,0,1,0,55.88,200.13,102,102,0,1,0,200.12,55.88ZM90,209.62a89.61,89.61,0,0,1-21.23-13.89L90,174.49Zm32,8.16a90,90,0,0,1-20-3.58V162.49l20-20Zm32-3.58a89.8,89.8,0,0,1-20,3.58V130.49l20-20Zm32-17.4a89.45,89.45,0,0,1-20,12.83V98.49l20-20ZM60.27,187.24a90,90,0,0,1,127-127ZM198,184.57V71.43a90,90,0,0,1,0,113.14Z"
          />
        </svg>
        <div
          class="breadcrumbItemLabelStyle"
        >
          <div
            class="mia-platform-typography mia-platform-typography-ellipsis mia-platform-typography-single-line mia-platform-typography-ellipsis-single-line bodyL"
            role="paragraph"
          >
            first
          </div>
        </div>
      </div>
    </div>
    <svg
      alt="PiCaretRight"
      aria-label="PiCaretRight"
      color="#636363"
      fill="currentColor"
      height="16"
      role="img"
      stroke="currentColor"
      stroke-width="0"
      style="color: rgb(99, 99, 99);"
      viewBox="0 0 256 256"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"
      />
    </svg>
    <div
      class="breadcrumbItemWrapper"
    >
      <div
        class="breadcrumbItemLabelWrapper withoutMenu"
      >
        <svg
          alt="PiCircleHalfTiltLight"
          aria-label="PiCircleHalfTiltLight"
          color="black"
          fill="currentColor"
          height="16"
          role="img"
          stroke="currentColor"
          stroke-width="0"
          style="color: black;"
          viewBox="0 0 256 256"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M200.12,55.88A102,102,0,1,0,55.88,200.13,102,102,0,1,0,200.12,55.88ZM90,209.62a89.61,89.61,0,0,1-21.23-13.89L90,174.49Zm32,8.16a90,90,0,0,1-20-3.58V162.49l20-20Zm32-3.58a89.8,89.8,0,0,1-20,3.58V130.49l20-20Zm32-17.4a89.45,89.45,0,0,1-20,12.83V98.49l20-20ZM60.27,187.24a90,90,0,0,1,127-127ZM198,184.57V71.43a90,90,0,0,1,0,113.14Z"
          />
        </svg>
        <div
          class="breadcrumbItemLabelStyle"
        >
          <div
            class="mia-platform-typography mia-platform-typography-ellipsis mia-platform-typography-single-line mia-platform-typography-ellipsis-single-line bodyL"
            role="paragraph"
          >
            second
          </div>
        </div>
      </div>
    </div>
    <svg
      alt="PiCaretRight"
      aria-label="PiCaretRight"
      color="#636363"
      fill="currentColor"
      height="16"
      role="img"
      stroke="currentColor"
      stroke-width="0"
      style="color: rgb(99, 99, 99);"
      viewBox="0 0 256 256"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"
      />
    </svg>
    <div
      class="breadcrumbItemWrapper"
    >
      <div
        class="breadcrumbItemLabelWrapper withoutMenu"
      >
        <div
          class="breadcrumbItemLabelStyle"
        >
          <div
            class="mia-platform-typography mia-platform-typography-ellipsis mia-platform-typography-single-line mia-platform-typography-ellipsis-single-line bodyL"
            role="paragraph"
          >
            third
          </div>
        </div>
      </div>
    </div>
    <svg
      alt="PiCaretRight"
      aria-label="PiCaretRight"
      color="#636363"
      fill="currentColor"
      height="16"
      role="img"
      stroke="currentColor"
      stroke-width="0"
      style="color: rgb(99, 99, 99);"
      viewBox="0 0 256 256"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"
      />
    </svg>
    <div
      class="breadcrumbItemWrapper"
    >
      <div
        class="breadcrumbItemLabelWrapper last withoutMenu"
      >
        <svg
          alt="PiCircleHalfTiltLight"
          aria-label="PiCircleHalfTiltLight"
          color="black"
          fill="currentColor"
          height="16"
          role="img"
          stroke="currentColor"
          stroke-width="0"
          style="color: black;"
          viewBox="0 0 256 256"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M200.12,55.88A102,102,0,1,0,55.88,200.13,102,102,0,1,0,200.12,55.88ZM90,209.62a89.61,89.61,0,0,1-21.23-13.89L90,174.49Zm32,8.16a90,90,0,0,1-20-3.58V162.49l20-20Zm32-3.58a89.8,89.8,0,0,1-20,3.58V130.49l20-20Zm32-17.4a89.45,89.45,0,0,1-20,12.83V98.49l20-20ZM60.27,187.24a90,90,0,0,1,127-127ZM198,184.57V71.43a90,90,0,0,1,0,113.14Z"
          />
        </svg>
        <div
          class="breadcrumbItemLabelStyle"
        >
          <div
            class="mia-platform-typography mia-platform-typography-ellipsis mia-platform-typography-single-line mia-platform-typography-ellipsis-single-line bodyL"
            role="paragraph"
          >
            fourth
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Breadcrumb Component renders a breadcrumb with one item - icon and title 1`] = `
<DocumentFragment>
  <div
    class="breadcrumb"
  >
    <div
      class="breadcrumbItemWrapper"
    >
      <div
        class="breadcrumbItemLabelWrapper initial last withoutMenu"
      >
        <svg
          alt="PiCircleHalfTiltLight"
          aria-label="PiCircleHalfTiltLight"
          color="black"
          fill="currentColor"
          height="16"
          role="img"
          stroke="currentColor"
          stroke-width="0"
          style="color: black;"
          viewBox="0 0 256 256"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M200.12,55.88A102,102,0,1,0,55.88,200.13,102,102,0,1,0,200.12,55.88ZM90,209.62a89.61,89.61,0,0,1-21.23-13.89L90,174.49Zm32,8.16a90,90,0,0,1-20-3.58V162.49l20-20Zm32-3.58a89.8,89.8,0,0,1-20,3.58V130.49l20-20Zm32-17.4a89.45,89.45,0,0,1-20,12.83V98.49l20-20ZM60.27,187.24a90,90,0,0,1,127-127ZM198,184.57V71.43a90,90,0,0,1,0,113.14Z"
          />
        </svg>
        <div
          class="breadcrumbItemLabelStyle"
        >
          <div
            class="mia-platform-typography mia-platform-typography-ellipsis mia-platform-typography-single-line mia-platform-typography-ellipsis-single-line bodyL"
            role="paragraph"
          >
            Text
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Breadcrumb Component renders a breadcrumb with one item - title only 1`] = `
<DocumentFragment>
  <div
    class="breadcrumb"
  >
    <div
      class="breadcrumbItemWrapper"
    >
      <div
        class="breadcrumbItemLabelWrapper initial last withoutMenu"
      >
        <div
          class="breadcrumbItemLabelStyle"
        >
          <div
            class="mia-platform-typography mia-platform-typography-ellipsis mia-platform-typography-single-line mia-platform-typography-ellipsis-single-line bodyL"
            role="paragraph"
          >
            Text
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Breadcrumb Component renders a breadcrumb with two items 1`] = `
<DocumentFragment>
  <div
    class="breadcrumb"
  >
    <div
      class="breadcrumbItemWrapper"
    >
      <div
        class="breadcrumbItemLabelWrapper initial withoutMenu"
      >
        <svg
          alt="PiCircleHalfTiltLight"
          aria-label="PiCircleHalfTiltLight"
          color="black"
          fill="currentColor"
          height="16"
          role="img"
          stroke="currentColor"
          stroke-width="0"
          style="color: black;"
          viewBox="0 0 256 256"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M200.12,55.88A102,102,0,1,0,55.88,200.13,102,102,0,1,0,200.12,55.88ZM90,209.62a89.61,89.61,0,0,1-21.23-13.89L90,174.49Zm32,8.16a90,90,0,0,1-20-3.58V162.49l20-20Zm32-3.58a89.8,89.8,0,0,1-20,3.58V130.49l20-20Zm32-17.4a89.45,89.45,0,0,1-20,12.83V98.49l20-20ZM60.27,187.24a90,90,0,0,1,127-127ZM198,184.57V71.43a90,90,0,0,1,0,113.14Z"
          />
        </svg>
        <div
          class="breadcrumbItemLabelStyle"
        >
          <div
            class="mia-platform-typography mia-platform-typography-ellipsis mia-platform-typography-single-line mia-platform-typography-ellipsis-single-line bodyL"
            role="paragraph"
          >
            first
          </div>
        </div>
      </div>
    </div>
    <svg
      alt="PiCaretRight"
      aria-label="PiCaretRight"
      color="#636363"
      fill="currentColor"
      height="16"
      role="img"
      stroke="currentColor"
      stroke-width="0"
      style="color: rgb(99, 99, 99);"
      viewBox="0 0 256 256"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"
      />
    </svg>
    <div
      class="breadcrumbItemWrapper"
    >
      <div
        class="breadcrumbItemLabelWrapper last withoutMenu"
      >
        <svg
          alt="PiCircleHalfTiltLight"
          aria-label="PiCircleHalfTiltLight"
          color="black"
          fill="currentColor"
          height="16"
          role="img"
          stroke="currentColor"
          stroke-width="0"
          style="color: black;"
          viewBox="0 0 256 256"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M200.12,55.88A102,102,0,1,0,55.88,200.13,102,102,0,1,0,200.12,55.88ZM90,209.62a89.61,89.61,0,0,1-21.23-13.89L90,174.49Zm32,8.16a90,90,0,0,1-20-3.58V162.49l20-20Zm32-3.58a89.8,89.8,0,0,1-20,3.58V130.49l20-20Zm32-17.4a89.45,89.45,0,0,1-20,12.83V98.49l20-20ZM60.27,187.24a90,90,0,0,1,127-127ZM198,184.57V71.43a90,90,0,0,1,0,113.14Z"
          />
        </svg>
        <div
          class="breadcrumbItemLabelStyle"
        >
          <div
            class="mia-platform-typography mia-platform-typography-ellipsis mia-platform-typography-single-line mia-platform-typography-ellipsis-single-line bodyL"
            role="paragraph"
          >
            second
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
